<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserListingActivity">

    <Button
        android:id="@+id/returnSuccess"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="123dp"
        android:text="@string/returnSuccess" />

    <ListView
        android:id="@+id/listingsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />
</LinearLayout>

