...
        android:text="@string/postGoods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <Button
        android:id="@+id/userListing"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="138dp"
...
